# wayru-os

./: .gitignore  MIGRATION.md  Makefile  README.md  VM_Setup.md  base-config.toml  justfile  main.py  migrate.sh  pyproject.toml
profiles/apocalypse/uci-defaults/: 90-dhcp-config  90-network-ip
profiles/ares/uci-defaults/: 90-firewall-config
profiles/aria/uci-defaults/: 90-firewall-config
profiles/artemisa/: profile-config.toml
profiles/artemisa/uci-defaults/: 99-openwisp-onboard  99-wireless-operator
profiles/deimos/uci-defaults/: 90-firewall-config  90-network-ip  99-openwisp-onboard
profiles/gaia/uci-defaults/: 90-network-ip  99-openwisp-onboard
profiles/genesis/uci-defaults/: 90-firewall-config  90-network-ip
profiles/helios/uci-defaults/: 90-dhcp-config  90-firewall-config  90-network-ip  99-openwisp-onboard
profiles/loki/: profile-config.toml
profiles/loki/uci-defaults/: 90-network-ip  99-openwisp-onboard  99-wireless-operator
profiles/neron/: profile-config.toml
profiles/neron/config/: radsecproxy
profiles/neron/uci-defaults/: 90-firewall-config  99-openwisp-onboard  99-wireless-operator
profiles/prometheus/uci-defaults/: 90-dhcp-config  90-firewall-config  90-network-ip
tools/: add_patches.py  clone-openwrt.py  clone-openwrt.sh  configure-feeds.py  configure.py  upload-build.py
